--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,11 @@ refsheet_nsfw.png
 processed_images/
 zips/
 nsfw.toml
+/wrangler.toml
+/.yarnrc.yml
+
+#static resources:
+*.png
+*.jpg
+/config.toml
+/static_content/
