Added my own tooling for getting S3/R2 resources etc.
Tooling released under terms of BSD0 or CC0 whichever you prefer.

--- a/config.base.toml
+++ b/config.base.toml
@@ -1,6 +1,3 @@
-# The URL the site will be built for
-base_url = "https://refs.videah.net"
-
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
@@ -15,6 +12,6 @@ highlight_code = false
 [extra]
 # Put all your custom variables here
 blurhash = false
-umami_domain = "analytics.videah.net"
-umami_id = "6ad419cc-112a-4486-a258-b799bb58ffaf"
-umami_track_domain = "refs.videah.net"
+# umami_domain = "analytics.videah.net"
+# umami_id = "6ad419cc-112a-4486-a258-b799bb58ffaf"
+# umami_track_domain = "refs.videah.net"
