--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tailwindcss": "^3.1.8",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "^4.9.4",
-    "vite": "~5.2.6",
+    "vite": "^7.0.1",
     "zola-bin": "^0.3.7"
   },
   "scripts": {
