--- a/package.json
+++ b/package.json
@@ -21,17 +21,16 @@
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "^5.8.3",
-    "vite": "^7.0.1",
-    "zola-bin": "^1.0.0"
+    "vite": "^7.0.1"
   },
   "scripts": {
     "watch": "./watch.sh",
     "build": "tsc && cross-env DEV=false npm-run-all zips:build zola:build vite:build",
     "deploy": "docker build . --tag videah/refsheep:latest && docker push videah/refsheep:latest",
-    "zola:serve": "zola-bin serve -i 0.0.0.0 -u localhost",
+    "zola:serve": "zola serve -i 0.0.0.0 -u localhost",
     "vite:serve": "vite",
     "tailwind:serve": "npx @tailwindcss/cli -i src/tailwind.css -o static/style.css --watch",
-    "zola:build": "zola-bin build",
+    "zola:build": "zola build",
     "vite:build": "vite build",
     "zips:build": "python Generate_Zips.py"
   },
@@ -41,6 +40,6 @@
     "camelcase": "^8.0.0",
     "copy-to-clipboard": "^3.3.3",
     "node-gyp": "^11.2.0",
-    "three": "^0.178.0"
+    "three": "~0.172.0"
   }
 }
